0.4.5
====================
* Remove coverage

0.4.4 (2025-03-20)
====================
* Update storage settings to use Django's new STORAGES dictionary.

0.4.3 (2024-10-16)
====================
* Updated sentry-js config again to be more failsafe, and also
  configure user data in initialScope on initialization.

0.4.2 (2024-10-14)
====================
* Updated sentry-js config to use Sentry.onLoad.

0.4.1 (2024-10-11)
====================
* Updated sentry JS config to use username instead of id.
* Include ctlsettings in INSTALLED_APPS by default.

0.4.0 (2024-10-10)
====================
* Added a custom context processor to make settings available in
  templates.
* Added 'testing' environment when running tests.
* Added sentry_js.html template partial, to unify the code for this
  setup.

0.3.6 (2024-10-09)
====================
* Added ENVIRONMENT django setting, denoting either 'staging' or
  'production'

0.3.5 (2024-10-08)
====================
* Updated sentry_init to include environment tag.
* Introduced traces_sample_rate=1.0 in sentry staging config

0.3.4 (2024-08-23)
====================
* Introduced init_sentry function for staging and production.

0.3.3 (2024-08-15)
====================
* Added token process to get_ec2_instance_ip()

0.3.2 (2024-04-16)
====================
* Added CSRF_TRUSTED_ORIGINS config for Django >= 4.0
* Use log rotation for django logs

0.3.1 (2024-01-08)
====================
* fixed typo for http forwarded setting

0.3.0 (2023-12-08)
====================
* Use CAS_MAP_AFFILIATIONS=True by default
* Updated README
* Added sentry init to default staging/production config
* Added CAS_CAS_FORCE_SSL_SERVICE_URL setting
* Added Dynamic IP Lookup
* 'stage' added to ALLOWED_HOSTS

0.2.0 (2023-02-21)
====================
* django-storages: remove deprecated AWS_PRELOAD_METADATA setting
* Removed django-cacheds3storage dependency
* Enabled USE_TZ by default
* Added 127.0.0.1 to ALLOWED_HOSTS

0.1.0 (2023-02-17)
====================