@@ -14,12 +14,10 @@ setup(
         'django-debug-toolbar',
         'django-smoketest',
         'django-extensions',
-        'django-statsd-mozilla',
         'sentry-sdk',
         'django-storages',
         'boto3',
         'requests',
-        'statsd',
         'gunicorn',
         'django-impersonate',
     ],
